assets/css/styles.css
/* ... */
div.authentication form input[type=text],
div.authentication form input[type=password] {
	font-family: 'Roboto', sans-serif;
	font-weight: 500;
	font-size: .9em;
	border: 2px solid #ee9b35;
	padding: 0 5px;
	
}

div.authentication form input[type=text]:focus,
div.authentication form input[type=password]:focus {
	border: 2px solid #e7045a;
}
div.authentication form #input--submit {
	font-family: 'lovelo', sans-serif;
	font-size: .9em;
	line-height: 25px;
	border: 2px solid #e7045a;
	background-color: transparent;
	color: #e7045a;
}
div.authentication form #input--submit:hover {
	border-color: #ee9b35;
	color: #ee9b35;
	background-color: rgba(238, 155, 53, 0.1);
	cursor: pointer;
}
div.authentication form label {
	font-size: .8em;
	color: #b6c1c9;
	margin-bottom: 5px;
}
div.authentication #login form input {
	width: 300px;
}
div.authentication #registration form input {
	width: 300px;
}
div.authentication #registration form #input--submit {
	margin-left: 20px;
	align-self: flex-end;
	width: 150px;
}
div.authentication #registration #field-separator--left {
	margin-right: 20px;
}
div.authentication .form-container {
	display: flex;
	flex-direction: column;
	align-items: center;
}
div.authentication #registration form #mobile-form {
	display: none;
}

/** Error Box **/
p.error-box {
	padding: 10px 5px;
	border: 2px solid #c0392b;
	color: #c0392b;
	margin-bottom: 20px;
}
p.success-box {
	padding: 10px 5px;
	border: 2px solid #2ecc71;
	color: #2ecc71;
	margin-bottom: 20px;
}





@media all and (max-width: 1250px) {
	div.authentication {
		flex-direction: column;
	}
	
	div.authentication #registration {
		flex-grow: 3;
		padding-left: 0px;
		padding-top: 25px;
		border-left: none;
		border-top: 2px solid #ecf0f1;
	}
	div.authentication #login {
		margin-bottom: 30px;
	}
}

@media all and (max-width: 965px) {
	.filemanager  #content {
		margin: 30px auto 0;
/* 		padding: 1px; */
	}
	
	.filemanager header .search input[type="search"]:focus {
		width: 300px;
	}
	
	/** Registration **/
	div.authentication #form--register {
		flex-direction: column;
	}
	div.authentication #registration form #field-separator--left,
	div.authentication #registration form #field-separator--right {
		display: none;
	}
	div.authentication #registration form #mobile-form {
		display: block;
	}
	div.authentication #registration form #input--submit {
		margin-left: 0;
		width: 300px;
	}
}

@media all and (max-width: 420px) {
	.filemanager header .search input[type="search"]:focus {
		width: 250px;
	}
	
	/** Registration **/
	div.authentication .form-container {
		display: block;
	}
	div.authentication form input {
		width: 100% !important;
	}
	div.authentication #login {
		padding-right: 0;
	}
}

@media all and (max-width: 700px) {
	#paste-form input[type=text] {
		width: 100% !important;
	}
	#paste-form input#paste-save-button, 
	.filemanager #content.paste button.pst-url-copy {
		position: static;
		width: 100%;
	}
	#paste-form input#paste-save-button {
		margin-top: 20px;
	}
	.filemanager #content.paste button.pst-url-copy {
		margin-bottom: 20px;
	}
}

.filemanager .data {
	margin: -60px 0 60px 0;
	padding-top: 40px;
	z-index: -3;
}

.filemanager .data.animated {
	-webkit-animation: showSlowlyElement 700ms; /* Chrome, Safari, Opera */
	animation: showSlowlyElement 700ms; /* Standard syntax */
}

.filemanager .data li {
	border-radius: 3px;
	/*background-color: #373743;*/
	/*background-color: #ecf0f1;*/
	background-color: #fff;
	width: 307px;
	height: 118px;
	list-style-type: none;
	margin: 10px;
	display: inline-block;
	position: relative;
	overflow: hidden;
	padding: 0.3em;
	z-index: 1;
	box-sizing: border-box;
	-webkit-transition: all .4s ease-in-out;
	transition: all .4s ease-in-out;
	-webkit-box-shadow: 0 8px 6px -6px rgba(0,0,0,0.3);
	box-shadow: 0 8px 6px -6px rgba(0,0,0,0.3);
}

.filemanager .data li:hover {
	/*background-color: #42424E;*/

}

.filemanager .data li.files {
	cursor: default;
}

.filemanager .data li.folders a.folders {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 99;
}
.filemanager .data li .links {
	z-index: 999;
}
.filemanager .data li .links a {
	font-size: .8em;
	text-decoration: none;
	-webkit-transition: color .4s ease;
	transition: color .4s ease;
}

.filemanager .data li .links a.viewfile {
	color: #eb892f;
}
.filemanager .data li .links a.viewfile:hover {
	color: #e7045a;
}

.filemanager .data li .links a.downloadfile {
	color: #e7045a;
}
.filemanager .data li .links a.downloadfile:hover {
	color: #eb892f;
}

.filemanager .data li .name {
	color: #7f8c8d;
	font-size: 15px;
	font-weight: 700;
	line-height: 20px;
	width: 150px;
	white-space: nowrap;
	display: inline-block;
	position: absolute;
	overflow: hidden;
	text-overflow: ellipsis;
	top: 40px;
}

.filemanager .data li .details {
	color: #b6c1c9;
	font-size: 13px;
	font-weight: 400;
	width: 55px;
	height: 10px;
	top: 64px;
	white-space: nowrap;
	position: absolute;
	display: inline-block;
}

.filemanager .data li .links {
	white-space: nowrap;
	position: absolute;
	display: inline-block;
	top: 85px;
}

.filemanager .data li .delete {
	display: none;
}
.filemanager .data.loggedin li .delete {
	display: block;
	position: absolute;
	top: 7px;
	right: 7px;
}
.filemanager .data.loggedin li .delete a {
	font-size: 1.1em;
	color: #e74c3c;
}

.filemanager .nothingfound {
	/*background-color: #373743;*/
	background-color: #ecf0f1;
	width: 23em;
	height: 21em;
	border-radius: 3px;
	margin: 0 auto;
	display: none;
	font-family: Arial;
	-webkit-animation: showSlowlyElement 700ms; /* Chrome, Safari, Opera */
	animation: showSlowlyElement 700ms; /* Standard syntax */
}

.filemanager .nothingfound .nofiles {
	margin: 30px auto;
	top: 3em;
	border-radius: 50%;
	position:relative;
	background-color: #d72f6e;
	width: 11em;
	height: 11em;
	line-height: 11.4em;
}
.filemanager .nothingfound .nofiles:after {
	content: '×';
	position: absolute;
	color: #ffffff;
	font-size: 14em;
	margin-right: 0.092em;
	right: 0;
}
/* ... */

